Temporary box to display number.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header>Calculator</header>
+    <div class="displayBox">
+
+    </div>
     <div class="buttons">
         <button id="ac">AC</button>
         <button id="c">C</Canvas></button>
