Add ID to displayBox HTML. Display array as number in displayBox.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>Calculator</header>
-    <div class="displayBox">
-
+    <div id="displayBox" class="displayBox">
+        0
     </div>
     <div class="buttons">
         <button id="ac">AC</button>
