--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <body>
     <header>Calculator</header>
     <div id="displayBox" class="displayBox">
-        0
+        <div id="topText" class="topText">
+
+        </div>
+        <div id="bottomText" class="bottomText">
+            0
+        </div>
     </div>
     <div class="buttons">
         <button id="ac">AC</button>
