--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button id="add">+</button>
         <button id="subtract">-</button>
         <button id="multiply">x</button>
-        <button id="divide">/</button>
+        <button id="divide">÷</button>
     </div>
 </body>
 </html>
