--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <button id="eight" value=8>8</button>
         <button id="nine" value=9>9</button>
         <button id="zero" value=0>0</button>
+        <button id="decimal">.</button>
         <button id="equal">=</button>
         <button id="add">+</button>
         <button id="subtract">-</button>
