--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>
     </div>
     <div class="buttons">
-        <button id="ac">AC</button>
-        <button id="c">C</Canvas></button>
+        <button id="c">C</button>
+        <button id="ce">CE</Canvas></button>
         <button id="one" value=1>1</button>
         <button id="two" value=2>2</button>
         <button id="three" value=3>3</button>
