--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
         </div>
     </div>
     <div class="buttons">
-        <button id="c">C</button>
-        <button id="ce">CE</Canvas></button>
-        <button id="one" value=1>1</button>
-        <button id="two" value=2>2</button>
-        <button id="three" value=3>3</button>
-        <button id="four" value=4>4</button>
-        <button id="five" value=5>5</button>
-        <button id="six" value=6>6</button>
-        <button id="seven" value=7>7</button>
-        <button id="eight" value=8>8</button>
-        <button id="nine" value=9>9</button>
-        <button id="zero" value=0>0</button>
-        <button id="decimal">.</button>
-        <button id="equal">=</button>
-        <button id="add">+</button>
-        <button id="subtract">-</button>
-        <button id="multiply">x</button>
-        <button id="divide">÷</button>
+        <button id="c" class="erase">C</button>
+        <button id="ce" class="erase">CE</Canvas></button>
+        <button id="one" class="number" value=1>1</button>
+        <button id="two" class="number" value=2>2</button>
+        <button id="three" class="number" value=3>3</button>
+        <button id="four" class="number" value=4>4</button>
+        <button id="five" class="number" value=5>5</button>
+        <button id="six" class="number" value=6>6</button>
+        <button id="seven" class="number" value=7>7</button>
+        <button id="eight" class="number" value=8>8</button>
+        <button id="nine" class="number" value=9>9</button>
+        <button id="zero" class="number" value=0>0</button>
+        <button id="decimal" class="number">.</button>
+        <button id="equal" class="operating">=</button>
+        <button id="add" class="operating">+</button>
+        <button id="subtract" class="operating">-</button>
+        <button id="multiply" class="operating">x</button>
+        <button id="divide" class="operating">÷</button>
     </div>
 </body>
 </html>
